improve description